# space-probe-log

./: .dockerignore  .gitignore  README.md  docker-compose.yml  space_probe_log.db
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_simulation_clock_navigation.py  0003_admin_scheduler.py
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  health.py  logs.py  probe.py  serializers.py  settings.py  simulation.py  world.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/importers/: __init__.py  jpl_horizons.py  nasa_exoplanet.py  normalize.py
backend/app/llm/: client.py  factory.py  mock.py  openai_compatible.py
backend/app/models/: __init__.py  entities.py
backend/app/prompts/: action_policy.md  log_writer_style.md  probe_profile.md
backend/app/repositories/: read.py  settings.py
backend/app/schemas/: __init__.py  domain.py
backend/app/services/: action_validation.py  auth.py  clock.py  navigation.py  probe_spec.py  reset.py  route_hazards.py  scheduler.py  simulation.py  snapshots.py
backend/app/tests/: conftest.py  test_admin_scheduler.py  test_clock_navigation.py  test_llm_payloads.py  test_map_api.py  test_prompt_settings.py  test_real_space_importers.py  test_route_hazards.py  test_simulation.py  test_world_generation.py
backend/app/world/: generator.py
backend/scripts/: import_real_space_data.py
backend/space_probe_log_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+26 files in other folders)
