[project]
name = "space-probe-log-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.2", "pytest-asyncio>=0.23.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
